--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>se.johannesdahlgren.marble</groupId>
     <artifactId>fantasyleague</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
     <name>MarbleFantasyLeague</name>
     <description>MarbleFantasyLeague</description>
     <packaging>pom</packaging>
