--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,10 +9,12 @@ jobs:
     name: Build and test
     uses: ./.github/workflows/build-and-test.yml
   release:
+    needs:
+      - build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag $GITHUB_REF_NAME:$(date +%s)
+        run: docker build . --file user/Dockerfile --tag $GITHUB_REF_NAME:$(date +%s)
 
 
