--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,6 +14,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: Download jars
+        uses: actions/download-artifact@v3
+        with:
+          name: user
       - name: Build the Docker image
         run: docker build . --file user/Dockerfile --tag $GITHUB_REF_NAME:$(date +%s)
 
