--- a/user/Dockerfile
+++ b/user/Dockerfile
@@ -1,5 +1,5 @@
 FROM openjdk:17-alpine
 MAINTAINER Johannes Dahlgren
-COPY target/user-*.jar user.jar
+COPY user-*.jar user.jar
 EXPOSE 8080
 ENTRYPOINT ["java","-jar","/user.jar"]
