--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,6 +9,7 @@ jobs:
     name: Build and test
     uses: ./.github/workflows/build-and-test.yml
   release:
+    name: Build docker and push to ecr
     needs:
       - build
     runs-on: ubuntu-latest
@@ -18,7 +19,23 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: user
-      - name: Build the Docker image
-        run: docker build . --file user/Dockerfile --tag $GITHUB_REF_NAME:$(date +%s)
-
-
+      - name: Set tag
+        id: tag
+        run: echo "::set-output name=tag::$GITHUB_REF_NAME-$(date +'%Y-%m-%d')"
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: eu-north-1
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v1
+      - name: Push image to Amazon ECR
+        env:
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          ECR_REPOSITORY: marble-fantasy-league-user
+          TAG: ${{steps.tag.outputs.tag}}
+        run: |
+          docker build . --file user/Dockerfile --tag $ECR_REGISTRY/$ECR_REPOSITORY:$TAG
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$TAG
